# distributor

./: Cargo.toml
kzg/: Cargo.toml
kzg/src/: lib.rs  static_srs.rs
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  lib.rs  srs.rs  utils.rs  verify_onchain.rs
program/src/instruction/: mod.rs  new_claim.rs  new_distributor.rs
program/src/state/: claim_status.rs  mod.rs  verkle_distributor.rs
program/tests/: unit_tests.rs
src/: entrypoint.rs  lib.rs
srs-cli/: Cargo.toml
srs-cli/src/: main.rs
verify/: Cargo.toml
verify/src/: lib.rs
verify/tests/: integration.rs
verkle-tree/: Cargo.toml
verkle-tree/src/: airdrop_verkle_tree.rs  csv_entry.rs  error.rs  kzg_commitment.rs  lib.rs  multiproof.rs  tree_node.rs  verkle_tree.rs
