[workspace]
members = [
    "program", 
    "verkle-tree"
]
resolver = "2"

[workspace.dependencies]
rand = "0.8.5"
serde = "1.0.137"
serde_derive = "1.0.171"
serde_json = "1.0.102"
serde_yaml = "0.9.25"
csv = "1.3.0"
fast-math = "0.1"
hex = "0.4.3"
solana-program = { version = "=1.16.16" }
solana-rpc-client = { version = "=1.16.16" }
solana-rpc-client-api = { version = "=1.16.16" }
solana-security-txt = { version = "1.1.1" }
solana-sdk = { version = "=1.16.16" }
indexmap = "2.1.0"
spl-associated-token-account = "2.2.0"
static_assertions = "1.1"
thiserror = "1.0.50"
ark-test-curves = "0.5.0"
ark-std = "0.5.0"
ark-poly = "0.5.0"
ark-ec = "0.5.0"
num-bigint = "0.4.6"
rayon = "1.10.0"
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
verkle-tree = { path = "verkle-tree" }