[package]
name = "kzg"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { version = "0.5", default-features = false, features=["derive"] }
ark-std = { workspace = true }
thiserror = { workspace = true }
blake3 = { version = "1", default-features = false, features=["std"] }

[features]
default = ["std"]
std = []
