[package]
name = "kzg"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = { workspace = true, default-features = false }
ark-ec = { workspace = true, default-features = false }
ark-ff = { workspace = true, default-features = false }
ark-serialize = { version = "0.5", default-features = false, features=["derive"] }
ark-std = { workspace = true, default-features = false }
thiserror = { workspace = true }
blake3 = { version = "1", default-features = false }

[features]
default = []
std = []
producer = []
