[package]
name = "srs-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = { workspace = true }
ark-serialize = { version = "0.5", default-features = false, features=["derive"] }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
blake3 = { version = "1", default-features=false, features=["std"] }
kzg = { path = "../kzg" }

[features]
default=["std"]
std=[]
