[package]
name = "verify"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = { workspace = true, default-features = false }
ark-ff = { workspace = true, default-features = false }
ark-poly = { workspace = true, default-features = false }
ark-ec = { workspace = true, default-features = false }
ark-serialize = { version = "0.5", default-features = false, features = ["derive"] }
ark-std = { workspace = true, default-features = false }