[package]
name = "verify"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-ec = { workspace = true }
ark-serialize = { version = "0.5", default-features = false, features = ["derive"] }
ark-std = { workspace = true, default-features = false }
kzg = { path = "../kzg" }
blake3 = { version = "1", default-features = true }
verkle-tree = { path = "../verkle-tree" }

[features]
default = []
debug-segments = []