[package]
name = "verkle-tree"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
fast-math = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
ark-ff = { workspace = true }
ark-test-curves = { workspace = true }
ark-std = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-poly = { workspace = true }
ark-ec = { workspace = true }
kzg-commitment = { workspace = true }
num-bigint = { workspace = true }
rayon = { workspace = true }
ark-serialize = { version = "0.4", default-features = false, features = ["derive"] }
blake3 = "1"