[package]
name = "verkle-tree"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
csv = { workspace = true }
fast-math = { workspace = true }
thiserror = { workspace = true }
ark-test-curves = { workspace = true }
ark-std = { workspace = true }
ark-poly = { workspace = true }
ark-ec = { workspace = true }
num-bigint = { workspace = true }
ark-bn254 = {workspace = true}
rayon = { workspace = true }
ark-serialize = { version = "0.5", default-features = false, features = ["derive"] }
blake3 = "1"
ark-ff = {workspace = true}
kzg = { path = "../kzg" }
